// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container /> ref should work 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  padding-left: 16px;
  padding-right: 16px;
}

<div
  class="poodle-box poodle-container c0"
>
  Container
</div>
`;

exports[`<Container /> should render Box props correctly 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  padding-left: 16px;
  padding-right: 16px;
  margin-top: 20px;
}

<div
  aria-expanded="true"
  class="poodle-box poodle-container c0"
  id="id"
>
  Container
</div>
`;

exports[`<Container /> should render Container correctly 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  padding-left: 16px;
  padding-right: 16px;
}

<div
  class="poodle-box poodle-container c0"
>
  Container
</div>
`;

exports[`<Container /> should render with fixed prop 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  padding-left: 16px;
  padding-right: 16px;
  max-width: 576px;
}

<div
  class="poodle-box poodle-container c0"
>
  Container
</div>
`;

exports[`<Container /> should render with gutter prop 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  padding-left: 40px;
  padding-right: 40px;
}

<div
  class="poodle-box poodle-container c0"
>
  Container
</div>
`;

exports[`<Container /> theming should extend styles in global 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  padding-left: 16px;
  padding-right: 16px;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<div
  class="poodle-box poodle-container c0"
>
  Container
</div>
`;

exports[`<Container /> theming should extend styles in local 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  padding-left: 16px;
  padding-right: 16px;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<div
  class="poodle-box poodle-container c0"
>
  Container
</div>
`;

exports[`<Container /> theming should override styles 1`] = `
.c0 {
  margin-top: 50px;
}

<div
  class="poodle-box poodle-container c0"
>
  Container
</div>
`;

exports[`<Container /> theming should render with default props correctly 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  padding-left: 16px;
  padding-right: 16px;
}

<div
  class="poodle-box poodle-container hello c0"
  id="id"
>
  Container
</div>
`;
